crates/ui/src/view/snapshots/tgt_ui__view__composer__tests__empty_placeholder_40x4.snap
---
source: crates/ui/src/view/composer.rs
expression: "render_to_string(40, 4, &state)"
---
╭──────────────────────────────────────╮
│ ›  message…                          │
│                                      │
╰──────────────────────────────────────╯
