crates/ui/src/view/snapshots/tgt_ui__view__composer__tests__multiline_content_with_cursor_mid_text_40x6.snap
---
source: crates/ui/src/view/composer.rs
expression: "render_to_string(40, 6, &state)"
---
╭──────────────────────────────────────╮
│› first line                          │
│  second line                         │
│                                      │
│                                      │
╰──────────────────────────────────────╯
