crates/ui/src/view/snapshots/tgt_ui__view__composer__tests__reply_banner_40x5.snap
---
source: crates/ui/src/view/composer.rs
expression: "render_to_string(40, 5, &state)"
---
  ↳ Alice: hey, did you see the PR?     
╭──────────────────────────────────────╮
│ ›  message…                          │
│                                      │
╰──────────────────────────────────────╯
